--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
+    "openai": "^6.16.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
